syntax="proto3";

package chess_engine;


import "google/protobuf/empty.proto";

service ChessService
{
rpc LoadBoard(LoadBoardReq) returns(ffnboard){};
rpc GenerateMoves(GenMoveReq) returns( ffnboard){};
rpc GetBoards(google.protobuf.Empty) returns(ffnboard){};
rpc MakeMove(MakeMoveReq) returns(ffnboard){};
}
    
message GenMoveReq
{
 uint32 file=3;
 uint32 rank=4;
}

message LoadBoardReq
{
 string board=1;
}
 
message MakeMoveReq
{
 uint32 piece=1;
 uint32 piece_color=2;
 uint64 move_position=5;
 uint64 piece_position=6;
}

message Bitboards
{
 repeated uint64 white_bitboard=1;
 repeated uint64 black_bitboard=2;
}

message ffnboard
{
 string board=1;
}